--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "set NODE_ENV=production&& vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
